# septek-core

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: main.c
